[tool.poetry]
name = "langgraph-test"
version = "0.1.0"
description = ""
authors = ["Timothe Lebrun <timothe463@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.38"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.6"
langchainhub = "^0.1.15"
chromadb = "^0.5.0"
langchain = "^0.1.20"
langgraph = "^0.0.49"
tavily-python = "^0.3.3"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
